// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ArrayElement clicking to the push button should successfully render a new array item 1`] = `
<fieldset id="id-characters" name="characters" aria-labelledby="id-characters-label" aria-describedby="id-characters-helper">
  <legend id="id-characters-label" for="id-characters">Characters</legend>
  <p id="id-characters-helper" data-fs-helper="true">Your characters</p><button type="button" data-fs-button="push">+</button>
</fieldset>
`;

exports[`components/ArrayElement clicking to the push button should successfully render a new array item 2`] = `
<fieldset id="id-characters" name="characters" aria-labelledby="id-characters-label" aria-describedby="id-characters-helper">
  <legend id="id-characters-label" for="id-characters">Characters</legend>
  <p id="id-characters-helper" data-fs-helper="true">Your characters</p><button type="button" data-fs-button="push">+</button>
</fieldset>
`;

exports[`components/ArrayElement clicking to the push button should successfully render a new array item 3`] = `
<fieldset id="id-characters" name="characters" aria-labelledby="id-characters-label" aria-describedby="id-characters-helper">
  <legend id="id-characters-label" for="id-characters">Characters</legend>
  <p id="id-characters-helper" data-fs-helper="true">Your characters</p><button type="button" data-fs-button="push">+</button>
</fieldset>
`;

exports[`components/ArrayElement should successfully render component with an array schema with a defined model 1`] = `
<fieldset id="id-characters" name="characters" aria-labelledby="id-characters-label" aria-describedby="id-characters-helper">
  <legend id="id-characters-label" for="id-characters">Characters</legend>
  <p id="id-characters-helper" data-fs-helper="true">Your characters</p>
  <div data-fs-kind="string" data-fs-type="text" data-fs-field="characters"><label for="id-characters-0"></label>
    <div data-fs-input="text"><input id="id-characters-0" type="text" name="characters" value="Goku">
      <div data-fs-buttons="3"><button type="button" disabled="disabled" data-fs-button="moveUp">↑</button><button type="button" data-fs-button="moveDown">↓</button><button type="button" data-fs-button="delete">-</button></div>
    </div>
  </div>
  <div data-fs-kind="string" data-fs-type="text" data-fs-field="characters"><label for="id-characters-1"></label>
    <div data-fs-input="text"><input id="id-characters-1" type="text" name="characters" value="Freezer">
      <div data-fs-buttons="3"><button type="button" data-fs-button="moveUp">↑</button><button type="button" disabled="disabled" data-fs-button="moveDown">↓</button><button type="button" data-fs-button="delete">-</button></div>
    </div>
  </div><button type="button" data-fs-button="push">+</button>
</fieldset>
`;

exports[`components/ArrayElement should successfully render component with an array schema with a model and value.length === 1 1`] = `
<fieldset id="id-characters" name="characters">
  <div data-fs-kind="string" data-fs-type="text" data-fs-field="characters"><label for="id-characters-0"></label>
    <div data-fs-input="text"><input id="id-characters-0" type="text" name="characters" value="goku"></div>
  </div><button type="button" data-fs-button="push">+</button>
</fieldset>
`;

exports[`components/ArrayElement should successfully render component with an array schema with a model and value.length > 1 1`] = `
<fieldset id="id-characters" name="characters">
  <div data-fs-kind="string" data-fs-type="text" data-fs-field="characters"><label for="id-characters-0"></label>
    <div data-fs-input="text"><input id="id-characters-0" type="text" name="characters" value="goku">
      <div data-fs-buttons="3"><button type="button" disabled="disabled" data-fs-button="moveUp">↑</button><button type="button" data-fs-button="moveDown">↓</button><button type="button" data-fs-button="delete">-</button></div>
    </div>
  </div>
  <div data-fs-kind="string" data-fs-type="text" data-fs-field="characters"><label for="id-characters-1"></label>
    <div data-fs-input="text"><input id="id-characters-1" type="text" name="characters" value="goten">
      <div data-fs-buttons="3"><button type="button" data-fs-button="moveUp">↑</button><button type="button" disabled="disabled" data-fs-button="moveDown">↓</button><button type="button" data-fs-button="delete">-</button></div>
    </div>
  </div><button type="button" data-fs-button="push">+</button>
</fieldset>
`;

exports[`components/ArrayElement should successfully render component with an array schema with an empty model 1`] = `
<fieldset id="id-characters" name="characters" aria-labelledby="id-characters-label" aria-describedby="id-characters-helper">
  <legend id="id-characters-label" for="id-characters">Characters</legend>
  <p id="id-characters-helper" data-fs-helper="true">Your characters</p>
  <div data-fs-kind="string" data-fs-type="text" data-fs-field="characters"><label for="id-characters-0"></label>
    <div data-fs-input="text"><input id="id-characters-0" type="text" name="characters"></div>
  </div><button type="button" data-fs-button="push">+</button>
</fieldset>
`;

exports[`components/ArrayElement should successfully render component with an array schema with an empty model and minItem === maxItem 1`] = `
<fieldset id="id-characters" name="characters" aria-labelledby="id-characters-label" aria-describedby="id-characters-helper">
  <legend id="id-characters-label" for="id-characters">Characters</legend>
  <p id="id-characters-helper" data-fs-helper="true">Your characters</p>
  <div data-fs-kind="string" data-fs-type="text" data-fs-field="characters"><label for="id-characters-0"></label>
    <div data-fs-input="text"><input id="id-characters-0" type="text" name="characters"></div>
  </div>
</fieldset>
`;

exports[`components/ArrayElement should successfully render component with an empty array 1`] = `
<fieldset id="id-characters" name="characters" aria-labelledby="id-characters-label" aria-describedby="id-characters-helper">
  <legend id="id-characters-label" for="id-characters">Empty array</legend>
  <p id="id-characters-helper" data-fs-helper="true">Your characters</p><button type="button" disabled="disabled" data-fs-button="push">+</button>
</fieldset>
`;

exports[`components/ArrayElement should successfully render component with an empty array with a defined model 1`] = `
<fieldset id="id-characters" name="characters" aria-labelledby="id-characters-label" aria-describedby="id-characters-helper">
  <legend id="id-characters-label" for="id-characters">Empty array</legend>
  <p id="id-characters-helper" data-fs-helper="true">Your characters</p><button type="button" disabled="disabled" data-fs-button="push">+</button>
</fieldset>
`;

exports[`components/ArrayElement should successfully render component without the push button when maxItems <= 1 1`] = `
<fieldset id="id-characters" name="characters" aria-labelledby="id-characters-label" aria-describedby="id-characters-helper">
  <legend id="id-characters-label" for="id-characters">Characters</legend>
  <p id="id-characters-helper" data-fs-helper="true">Your characters</p>
  <div data-fs-kind="string" data-fs-type="text" data-fs-field="characters"><label for="id-characters-0"></label>
    <div data-fs-input="text"><input id="id-characters-0" type="text" name="characters" value="Goku"></div>
  </div>
</fieldset>
`;

exports[`components/ArrayElement should successfully render component without the push button when maxItems <= 1 and minItems === 1 1`] = `
<fieldset id="id-characters" name="characters" aria-labelledby="id-characters-label" aria-describedby="id-characters-helper">
  <legend id="id-characters-label" for="id-characters">Characters</legend>
  <p id="id-characters-helper" data-fs-helper="true">Your characters</p>
  <div data-fs-kind="string" data-fs-type="text" data-fs-field="characters"><label for="id-characters-0"></label>
    <div data-fs-input="text"><input id="id-characters-0" type="text" name="characters" value="Goku"></div>
  </div>
</fieldset>
`;
